# air-quality-wing-zephyr-drivers

./: CMakeLists.txt  Kconfig  README.md  west.yml
drivers/: CMakeLists.txt  Kconfig
drivers/hpma115s0/: CMakeLists.txt  Kconfig  hpma115s0.c  hpma115s0.h
drivers/sensirion-common/: sensirion_common.h
drivers/sgp40/: CMakeLists.txt  Kconfig  sgp40.c  sgp40.h
drivers/shtc3/: Kconfig  shtc3.c  shtc3.h
dts/bindings/: honeywell,hpma115s0.yaml  sensirion,sgp40.yaml  sensirion,sgp40cd.yaml  sensirion,sgp40yaml  sensirion,shtc3.yaml  sensirion,shtc3cd.yaml
include/: aqw.h  sensirion_arch_config.h
include/codec/: aqw.h
lib/: CMakeLists.txt  Kconfig  aqw.c
lib/codec/: CMakeLists.txt  Kconfig  aqw.c
